[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
axum = "0.7"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"


dotenv = "0.15"
redis = { version = "0.27", features = ["tokio-comp"] }
