[package]
name = "load-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
hdrhistogram = "7"
rand = "0.8"
eventsource-stream = "0.2"
